# 3D-HEVC

./: .cproject  CMakeLists.txt  HTM.files  HTM.includes
CommonTestConditionsCfgs/: baseCfg_2view+depth.cfg  baseCfg_2view.cfg  baseCfg_3view+depth.cfg  baseCfg_3view.cfg
CommonTestConditionsCfgs_CE_on_VSP/: baseCfg_3view_b_texture+depth.RefOnly.cfg  baseCfg_3view_c_textureOnly.All.cfg
CommonTestConditionsResults/: 6.0rc1_vs_5.1.xls  HTM-4.1+B0131+B0045_vs_HTM-4.1+B0131+B0045+B0039.xls  HTM-4.1+B0131_vs_HTM-4.1+B0131+B0045.xls  HTM-5.1-dev1-HHI-Rev-226_vs_HTM-5.1-tag.xls  HTM-5.1-dev1-LG-Rev-253_vs_HTM-5.1-dev1-LG-Rev-251.xls  HTM3.0-Anchor_vs_rev73.xls  HTM3.0-Anchors-vers2.xls  HTM3.0-Anchors-vs-AnchorwithM24766.xls  JCT3V-D0105_D0139_AdoptedBVSPOffDepth.xls  JCT3V-D0112_DefaultDVRefinement.xls  JCT3V-D0138_max4corner_on_vs_off.xls  JCT3V-D0177_ARP on VS off.xls  JCT3V-D0177_ARP_warning_fix_vs_ARP on.xls  JCT3V-D0181_CU-levelNBDV on VS off.xls  JCT3V-D0191 On vs Off.xls  tag0.2r1_vs_tag0.3.xls  vsp_vs_5.1_newtemplate_b.xls  vsp_vs_5.1_newtemplate_c.xls
HTM.xcodeproj/: project.pbxproj
buildsys/: HM_vc2013.sln
cfg/: IBPsetting_balloons.cfg  IBPsetting_gtfly.cfg  IBPsetting_news.cfg  IBPsetting_poznanhall.cfg  IBPsetting_poznanstreet.cfg  IBPsetting_undodancer.cfg  encoder_mvd.cfg  renderer.cfg
checklist/: ETRIKHU_H0083_verified_by_Samsung.doc  HHI_I0066_checklist.doc  HiSilicon_I0120_checklist.doc  HiSilicon_I0123_checklist.doc  Hisilicon_H0108.doc  JCT3V-G0101.doc  KWU_E0117.doc  LGE_E0156.doc  LGE_E0158_E0159.doc  LGE_H0111.doc  LGE_J0041_J0050_J0046_J0042.doc  (+59 more)
(+5381 files in other folders)
